--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,11 @@ jobs:
     - name: npm install and build webpack
       run: |
         npm install
-        npm run build    
+        npm run build
+    - uses: actions/upload-artifact@main
+      with:
+        name: webpack artifacts
+        path: public/
   test:
     runs-on: ubuntu-latest
     strategy:
