--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,11 +31,9 @@ jobs:
     needs: build
         path: public/
   test:
+    needs: build
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-2016]
-        node-version: [12.x, 14.x]
+    ...
     steps:
     - uses: actions/checkout@v2
     - uses: actions/download-artifact@main
@@ -45,11 +43,7 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
-    - uses: actions/download-artifact@main
-      with:
-        name: webpack artifacts
-        path: public
-    - name: npm install, and test
+        node-version: ${{ matrix.node-version }}
     - name: npm install, and test
       run: |
         npm install
