--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,10 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: npm install and build webpack
-        run: |
-          npm install
-          npm run build
+      - name: npm install webpack
+        run: npm install
+      - name: npm build webpack
+        run:  npm run build
       - uses: actions/upload-artifact@main
         with:
           name: webpack artifacts
