trying to make this work

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,6 +36,7 @@ jobs:
         name: webpack artifacts
         path: public
     - name: Use Node.js ${{ matrix.node-version }}
+      id: setupNode${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
@@ -43,6 +44,7 @@ jobs:
         cache-dependency-path: ./package-lock.json
     - name: npm install
       run: npm install
+      if: steps.setupNode{{ matrix.node-version }} != 'true'
       env:
         CI: true
     - name: npm test
