--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,7 +36,7 @@ jobs:
         name: webpack artifacts
         path: public
     - name: Use Node.js ${{ matrix.node-version }}
-      id: ${{ format('setupNode{0}', matrix.node-version ) }}
+      id: ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
